[gd_scene load_steps=9 format=3 uid="uid://hvq5v641ggmg"]

[ext_resource type="Texture2D" uid="uid://yi348bghvfsa" path="res://Sprites/Items/DefaultItem/normalDefaultItem.png" id="1_ucron"]
[ext_resource type="Texture2D" uid="uid://b3iew63o5k2o" path="res://Sprites/Items/DefaultItem/pressedDefaultItem.png" id="2_g8f0f"]
[ext_resource type="Texture2D" uid="uid://bcr32q8w6rr7y" path="res://Sprites/Items/DefaultItem/hoverDefaultItem.png" id="3_8wg5k"]
[ext_resource type="Texture2D" uid="uid://m18vs842s5ob" path="res://Sprites/Items/DefaultItem/disabledDefaultItem.png" id="4_xufpi"]
[ext_resource type="BitMap" uid="uid://kby8rdt2ia2i" path="res://Sprites/Items/DefaultSizeClickMask.png" id="5_bwm0n"]
[ext_resource type="Texture2D" uid="uid://euqwmd87hul0" path="res://Sprites/UI/Movement/Interrogation/iconInterrogation.png" id="6_5rog1"]
[ext_resource type="Script" path="res://Scenes/Quests/UI/ObjectiveSelectButton.gd" id="6_fcbd1"]
[ext_resource type="PackedScene" uid="uid://bq68ppi6hhhj8" path="res://Scenes/Quests/UI/SelectObjectiveWindow.tscn" id="8_8s06l"]

[node name="ObjectiveSelectButton" type="TextureButton"]
texture_normal = ExtResource("1_ucron")
texture_pressed = ExtResource("2_g8f0f")
texture_hover = ExtResource("3_8wg5k")
texture_disabled = ExtResource("4_xufpi")
texture_click_mask = ExtResource("5_bwm0n")
script = ExtResource("6_fcbd1")

[node name="Texture" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.125
anchor_top = 0.125
anchor_right = 0.875
anchor_bottom = 0.875
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_5rog1")

[node name="SelectObjectiveWindow" parent="." instance=ExtResource("8_8s06l")]
visible = false

[connection signal="pressed" from="." to="." method="_on_pressed"]
